# cortex-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.py  swagger.json  test_fix.py  test_mcp_stdio.py  test_mcp_tools.py  test_ref_issue.py  test_resolution.py
.github/workflows/: docker-build-test.yml  publish.yml  test.yml
src/: config.py  server.py
src/clients/: cortex.py
src/components/: customizers.py
src/routes/: mappers.py
src/utils/: logging.py  openapi_resolver.py
tests/: conftest.py  test_components.py  test_config.py  test_openapi_resolver.py  test_routes.py
tests/integration/: test_docker.sh
tests/manual/: client.py
